help: Fix anchor hidden under navbar
The solution idea is from
https://github.com/twbs/bootstrap/issues/1768#issuecomment-46519033

--- a/static/themes/default/css/plinth.css
+++ b/static/themes/default/css/plinth.css
@@ -561,6 +561,15 @@ a.menu_link_active {
     grid-column: 1;
 }
 
+/* Help manual - anchor is below navbar */
+*[id^='idm']:before {
+  display: block;
+  content: " ";
+  margin-top: -60px;
+  height: 60px;
+  visibility: hidden;
+}
+
 @media screen and (max-width: 767px) {
     .app-header {
         display: flex;
